more interesting function, axis fixes

--- a/estimated-training-time/How are My Hyperparameters Affecting My Training Time?.ipynb
+++ b/estimated-training-time/How are My Hyperparameters Affecting My Training Time?.ipynb
@@ -32,6 +32,7 @@
    "outputs": [],
    "source": [
     "# Insert your SigOpt API token below, or set as the environment variable SIGOPT_API_TOKEN\n",
+    "# Find your API Token at https://sigopt.com/user/profile\n",
     "from sigopt.interface import Connection\n",
     "conn = Connection() # attempt to use environment variable SIGOPT_API_TOKEN\n",
     "# conn = Connection(client_token=SIGOPT_API_TOKEN) # enter token directly"
@@ -56,7 +57,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "View you experiment at https://sigopt.com/experiment/3066\n"
+      "View you experiment at https://sigopt.com/experiment/3087\n"
      ]
     }
    ],
@@ -67,7 +68,7 @@
     "    parameters=[\n",
     "        {'name': 'x', 'type': 'int', 'bounds': {'min': 0, 'max': 2}},\n",
     "        {'name': 'y', 'type': 'int', 'bounds': {'min': 0, 'max': 2}},\n",
-    "        {'name': 'z', 'type': 'double', 'bounds': {'min': 0, 'max': 2 * math.pi}},\n",
+    "        {'name': 'z', 'type': 'double', 'bounds': {'min': 0, 'max': 1.0}},\n",
     "    ],\n",
     ")\n",
     "print \"View you experiment at https://sigopt.com/experiment/{}\".format(experiment.id)"
@@ -81,16 +82,20 @@
    },
    "outputs": [],
    "source": [
-    "import math, random\n",
+    "import math, random, time\n",
     "def evaluate_metric(assignments):\n",
     "    x = assignments['x']\n",
     "    y = assignments['y']\n",
     "    z = assignments['z']\n",
     "    sum = 0\n",
-    "    for i in range(x):\n",
-    "        for j in range(y):\n",
-    "            sum += math.sin(z)\n",
-    "    return sum"
+    "    \n",
+    "    # Add in some Gaussian sleep to make graphs interesting\n",
+    "    random_sleep = random.gauss(x*y, 0.25)\n",
+    "    while random_sleep < 0:\n",
+    "        random_sleep = random.gauss(x*y, 0.25)\n",
+    "    time.sleep(random_sleep)\n",
+    "        \n",
+    "    return random.gauss(random_sleep, z)"
    ]
   },
   {
@@ -109,14 +114,12 @@
    },
    "outputs": [],
    "source": [
-    "from time import time\n",
-    "\n",
     "# train for 10x to 20x the number of dimensions\n",
     "for _ in range(30):\n",
     "    suggestion = conn.experiments(experiment.id).suggestions().create()\n",
-    "    start_ts = time()\n",
+    "    start_ts = time.time()\n",
     "    value = evaluate_metric(suggestion.assignments)\n",
-    "    end_ts = time()\n",
+    "    end_ts = time.time()\n",
     "    # Report an observation with training_time metadata\n",
     "    observation = conn.experiments(experiment.id).observations().create(\n",
     "        suggestion=suggestion.id,\n",
@@ -213,7 +216,7 @@
     {
      "data": {
       "text/html": [
-       "<div id=\"fc10f888-5e1a-4578-aee8-27524ca5fcf6\" style=\"height: 525; width: 100%;\" class=\"plotly-graph-div\"></div><script type=\"text/javascript\">window.PLOTLYENV=window.PLOTLYENV || {};window.PLOTLYENV.BASE_URL=\"https://plot.ly\";Plotly.newPlot(\"fc10f888-5e1a-4578-aee8-27524ca5fcf6\", [{\"x\": [2.8133392333984375e-05, 2.7179718017578125e-05, 2.5033950805664062e-05, 2.9802322387695312e-05, 2.6941299438476562e-05, 2.8133392333984375e-05, 1.5974044799804688e-05, 2.09808349609375e-05, 2.7894973754882812e-05, 2.5033950805664062e-05, 2.193450927734375e-05, 2.193450927734375e-05, 2.6941299438476562e-05, 1.6927719116210938e-05, 2.4080276489257812e-05, 2.09808349609375e-05, 3.409385681152344e-05, 2.6941299438476562e-05, 2.4080276489257812e-05, 2.5033950805664062e-05, 3.910064697265625e-05, 2.2172927856445312e-05, 3.0994415283203125e-05, 2.7894973754882812e-05, 2.3126602172851562e-05, 2.09808349609375e-05, 2.2172927856445312e-05, 2.09808349609375e-05, 2.5987625122070312e-05, 3.0040740966796875e-05], \"type\": \"histogram\"}], {\"title\": \"Distribution of Training Times\", \"yaxis\": {\"title\": \"seconds\"}}, {\"linkText\": \"Export to plot.ly\", \"showLink\": true})</script>"
+       "<div id=\"e50fbd6c-dd61-4e32-93e3-04cfc2846b1a\" style=\"height: 525; width: 100%;\" class=\"plotly-graph-div\"></div><script type=\"text/javascript\">window.PLOTLYENV=window.PLOTLYENV || {};window.PLOTLYENV.BASE_URL=\"https://plot.ly\";Plotly.newPlot(\"e50fbd6c-dd61-4e32-93e3-04cfc2846b1a\", [{\"x\": [3.8739898204803467, 3.71162486076355, 4.153061151504517, 4.289895057678223, 0.29040002822875977, 0.09891080856323242, 3.638184070587158, 3.9094250202178955, 1.887462854385376, 3.642519950866699, 0.013887882232666016, 0.386991024017334, 4.282311916351318, 0.28368401527404785, 2.1567859649658203, 4.053692102432251, 3.617285966873169, 3.8996100425720215, 4.112657070159912, 1.8546390533447266, 1.9639778137207031, 4.241988182067871, 4.133500099182129, 1.785417079925537, 4.326413154602051, 2.4601049423217773, 3.486644983291626, 3.998094081878662, 1.750730037689209, 2.2584171295166016], \"type\": \"histogram\"}], {\"xaxis\": {\"title\": \"seconds\"}, \"title\": \"Distribution of Training Times\"}, {\"linkText\": \"Export to plot.ly\", \"showLink\": true})</script>"
       ],
       "text/plain": [
        "<IPython.core.display.HTML object>"
@@ -236,7 +239,7 @@
     "    'data': [Histogram(x=training_time_map.values())],\n",
     "    'layout': {\n",
     "        'title': 'Distribution of Training Times',\n",
-    "        'yaxis': {'title': 'seconds'},\n",
+    "        'xaxis': {'title': 'seconds'},\n",
     "    },\n",
     "})"
    ]
@@ -282,7 +285,7 @@
     {
      "data": {
       "text/html": [
-       "<div id=\"1d74861a-66ef-41f2-8a4e-4e2fc8472d04\" style=\"height: 525; width: 100%;\" class=\"plotly-graph-div\"></div><script type=\"text/javascript\">window.PLOTLYENV=window.PLOTLYENV || {};window.PLOTLYENV.BASE_URL=\"https://plot.ly\";Plotly.newPlot(\"1d74861a-66ef-41f2-8a4e-4e2fc8472d04\", [{\"y\": [2.193450927734375e-05, 1.6927719116210938e-05, 2.4080276489257812e-05, 2.193450927734375e-05, 2.6941299438476562e-05, 2.2172927856445312e-05, 3.910064697265625e-05, 2.7894973754882812e-05, 3.0994415283203125e-05, 2.09808349609375e-05, 2.3126602172851562e-05, 2.09808349609375e-05, 2.2172927856445312e-05, 3.0040740966796875e-05, 2.5987625122070312e-05, 2.7894973754882812e-05, 2.5033950805664062e-05, 2.8133392333984375e-05, 2.7179718017578125e-05, 2.5033950805664062e-05, 2.9802322387695312e-05, 2.6941299438476562e-05, 2.8133392333984375e-05, 1.5974044799804688e-05, 2.09808349609375e-05, 2.4080276489257812e-05, 2.6941299438476562e-05, 2.09808349609375e-05, 2.5033950805664062e-05, 3.409385681152344e-05], \"x\": [2, 2, 0, 1, 2, 0, 1, 2, 1, 2, 0, 0, 0, 2, 2, 2, 1, 2, 1, 1, 1, 2, 2, 2, 2, 2, 2, 0, 2, 1], \"type\": \"scatter\", \"mode\": \"markers\"}], {\"title\": \"Training Time vs y\", \"yaxis\": {\"title\": \"seconds\"}}, {\"linkText\": \"Export to plot.ly\", \"showLink\": true})</script>"
+       "<div id=\"85d1e4c4-6c81-445a-9e92-3853bbc7bc47\" style=\"height: 525; width: 100%;\" class=\"plotly-graph-div\"></div><script type=\"text/javascript\">window.PLOTLYENV=window.PLOTLYENV || {};window.PLOTLYENV.BASE_URL=\"https://plot.ly\";Plotly.newPlot(\"85d1e4c4-6c81-445a-9e92-3853bbc7bc47\", [{\"y\": [2.2584171295166016, 1.750730037689209, 2.4601049423217773, 4.326413154602051, 3.998094081878662, 3.486644983291626, 1.785417079925537, 4.133500099182129, 4.053692102432251, 2.1567859649658203, 3.8996100425720215, 3.617285966873169, 1.8546390533447266, 4.112657070159912, 4.241988182067871, 1.9639778137207031, 1.887462854385376, 3.642519950866699, 4.153061151504517, 4.289895057678223, 3.8739898204803467, 3.71162486076355, 3.638184070587158, 3.9094250202178955, 0.29040002822875977, 0.09891080856323242, 0.386991024017334, 0.013887882232666016, 0.28368401527404785, 4.282311916351318], \"x\": [2, 2, 1, 2, 2, 2, 2, 2, 2, 1, 2, 2, 1, 2, 2, 1, 2, 2, 2, 2, 2, 2, 2, 2, 0, 2, 1, 0, 1, 2], \"type\": \"scatter\", \"mode\": \"markers\"}], {\"title\": \"Training Time vs y\", \"yaxis\": {\"title\": \"seconds\"}}, {\"linkText\": \"Export to plot.ly\", \"showLink\": true})</script>"
       ],
       "text/plain": [
        "<IPython.core.display.HTML object>"
@@ -294,7 +297,7 @@
     {
      "data": {
       "text/html": [
-       "<div id=\"ba64e564-3997-49a5-a725-9efd28b9dc74\" style=\"height: 525; width: 100%;\" class=\"plotly-graph-div\"></div><script type=\"text/javascript\">window.PLOTLYENV=window.PLOTLYENV || {};window.PLOTLYENV.BASE_URL=\"https://plot.ly\";Plotly.newPlot(\"ba64e564-3997-49a5-a725-9efd28b9dc74\", [{\"y\": [2.193450927734375e-05, 1.6927719116210938e-05, 2.4080276489257812e-05, 2.193450927734375e-05, 2.6941299438476562e-05, 2.2172927856445312e-05, 3.910064697265625e-05, 2.7894973754882812e-05, 3.0994415283203125e-05, 2.09808349609375e-05, 2.3126602172851562e-05, 2.09808349609375e-05, 2.2172927856445312e-05, 3.0040740966796875e-05, 2.5987625122070312e-05, 2.7894973754882812e-05, 2.5033950805664062e-05, 2.8133392333984375e-05, 2.7179718017578125e-05, 2.5033950805664062e-05, 2.9802322387695312e-05, 2.6941299438476562e-05, 2.8133392333984375e-05, 1.5974044799804688e-05, 2.09808349609375e-05, 2.4080276489257812e-05, 2.6941299438476562e-05, 2.09808349609375e-05, 2.5033950805664062e-05, 3.409385681152344e-05], \"x\": [1, 0, 1, 0, 2, 0, 2, 2, 2, 0, 2, 2, 0, 2, 2, 2, 1, 2, 1, 0, 2, 2, 2, 0, 0, 2, 1, 0, 2, 1], \"type\": \"scatter\", \"mode\": \"markers\"}], {\"title\": \"Training Time vs x\", \"yaxis\": {\"title\": \"seconds\"}}, {\"linkText\": \"Export to plot.ly\", \"showLink\": true})</script>"
+       "<div id=\"b001353f-7b69-4b2c-b6e8-43331acac250\" style=\"height: 525; width: 100%;\" class=\"plotly-graph-div\"></div><script type=\"text/javascript\">window.PLOTLYENV=window.PLOTLYENV || {};window.PLOTLYENV.BASE_URL=\"https://plot.ly\";Plotly.newPlot(\"b001353f-7b69-4b2c-b6e8-43331acac250\", [{\"y\": [2.2584171295166016, 1.750730037689209, 2.4601049423217773, 4.326413154602051, 3.998094081878662, 3.486644983291626, 1.785417079925537, 4.133500099182129, 4.053692102432251, 2.1567859649658203, 3.8996100425720215, 3.617285966873169, 1.8546390533447266, 4.112657070159912, 4.241988182067871, 1.9639778137207031, 1.887462854385376, 3.642519950866699, 4.153061151504517, 4.289895057678223, 3.8739898204803467, 3.71162486076355, 3.638184070587158, 3.9094250202178955, 0.29040002822875977, 0.09891080856323242, 0.386991024017334, 0.013887882232666016, 0.28368401527404785, 4.282311916351318], \"x\": [1, 1, 2, 2, 2, 2, 1, 2, 2, 2, 2, 2, 2, 2, 2, 2, 1, 2, 2, 2, 2, 2, 2, 2, 2, 0, 1, 1, 0, 2], \"type\": \"scatter\", \"mode\": \"markers\"}], {\"title\": \"Training Time vs x\", \"yaxis\": {\"title\": \"seconds\"}}, {\"linkText\": \"Export to plot.ly\", \"showLink\": true})</script>"
       ],
       "text/plain": [
        "<IPython.core.display.HTML object>"
@@ -306,7 +309,7 @@
     {
      "data": {
       "text/html": [
-       "<div id=\"3405f4b5-15ff-407f-be0f-f16b32141e15\" style=\"height: 525; width: 100%;\" class=\"plotly-graph-div\"></div><script type=\"text/javascript\">window.PLOTLYENV=window.PLOTLYENV || {};window.PLOTLYENV.BASE_URL=\"https://plot.ly\";Plotly.newPlot(\"3405f4b5-15ff-407f-be0f-f16b32141e15\", [{\"y\": [2.193450927734375e-05, 1.6927719116210938e-05, 2.4080276489257812e-05, 2.193450927734375e-05, 2.6941299438476562e-05, 2.2172927856445312e-05, 3.910064697265625e-05, 2.7894973754882812e-05, 3.0994415283203125e-05, 2.09808349609375e-05, 2.3126602172851562e-05, 2.09808349609375e-05, 2.2172927856445312e-05, 3.0040740966796875e-05, 2.5987625122070312e-05, 2.7894973754882812e-05, 2.5033950805664062e-05, 2.8133392333984375e-05, 2.7179718017578125e-05, 2.5033950805664062e-05, 2.9802322387695312e-05, 2.6941299438476562e-05, 2.8133392333984375e-05, 1.5974044799804688e-05, 2.09808349609375e-05, 2.4080276489257812e-05, 2.6941299438476562e-05, 2.09808349609375e-05, 2.5033950805664062e-05, 3.409385681152344e-05], \"x\": [2.6852367521907374, 5.783859450744, 5.639387199156705, 4.1858252731608125, 1.56620011863, 0.0, 2.24911030028, 1.54256241997, 6.006897493426029, 3.6268525714974857, 0.938494313463, 3.6420112143328107, 5.255014121232271, 1.2252575360562963, 2.26722554441, 0.959357774323, 0.9678997459, 2.29606320867, 1.15343033601, 2.2090998992, 0.9440481541906727, 3.24857904145, 2.2897829408047503, 1.98285692927, 0.0, 0.0, 0.9596865318038085, 2.429732678284642, 6.099827788284055, 4.300332873663198], \"type\": \"scatter\", \"mode\": \"markers\"}], {\"title\": \"Training Time vs z\", \"yaxis\": {\"title\": \"seconds\"}}, {\"linkText\": \"Export to plot.ly\", \"showLink\": true})</script>"
+       "<div id=\"e2aadc14-f648-4a58-8087-fe60599d7334\" style=\"height: 525; width: 100%;\" class=\"plotly-graph-div\"></div><script type=\"text/javascript\">window.PLOTLYENV=window.PLOTLYENV || {};window.PLOTLYENV.BASE_URL=\"https://plot.ly\";Plotly.newPlot(\"e2aadc14-f648-4a58-8087-fe60599d7334\", [{\"y\": [2.2584171295166016, 1.750730037689209, 2.4601049423217773, 4.326413154602051, 3.998094081878662, 3.486644983291626, 1.785417079925537, 4.133500099182129, 4.053692102432251, 2.1567859649658203, 3.8996100425720215, 3.617285966873169, 1.8546390533447266, 4.112657070159912, 4.241988182067871, 1.9639778137207031, 1.887462854385376, 3.642519950866699, 4.153061151504517, 4.289895057678223, 3.8739898204803467, 3.71162486076355, 3.638184070587158, 3.9094250202178955, 0.29040002822875977, 0.09891080856323242, 0.386991024017334, 0.013887882232666016, 0.28368401527404785, 4.282311916351318], \"x\": [0.642273031677, 0.259511985916, 0.925210684853, 0.173647969227, 0.255579248542, 0.915465332886, 0.822962594533, 0.21796238271, 0.295215255494, 0.8310633032802608, 0.872150350238, 1.0, 0.239899083942, 0.711050718127, 0.275099368788, 0.434616883178, 0.454406691243, 0.413463005066, 0.444168311511, 0.475197874034, 0.582883605719687, 0.09040003488454573, 0.0, 0.343187834712, 0.0, 0.0, 0.328202979348881, 0.686754173586232, 0.9192148119100507, 0.053788869726789895], \"type\": \"scatter\", \"mode\": \"markers\"}], {\"title\": \"Training Time vs z\", \"yaxis\": {\"title\": \"seconds\"}}, {\"linkText\": \"Export to plot.ly\", \"showLink\": true})</script>"
       ],
       "text/plain": [
        "<IPython.core.display.HTML object>"
@@ -364,7 +367,7 @@
     {
      "data": {
       "text/html": [
-       "<div id=\"a888e962-f3ba-4757-9632-3d7c2e161b1a\" style=\"height: 525; width: 100%;\" class=\"plotly-graph-div\"></div><script type=\"text/javascript\">window.PLOTLYENV=window.PLOTLYENV || {};window.PLOTLYENV.BASE_URL=\"https://plot.ly\";Plotly.newPlot(\"a888e962-f3ba-4757-9632-3d7c2e161b1a\", [{\"y\": [2.193450927734375e-05, 1.6927719116210938e-05, 2.4080276489257812e-05, 2.193450927734375e-05, 2.6941299438476562e-05, 2.2172927856445312e-05, 3.910064697265625e-05, 2.7894973754882812e-05, 3.0994415283203125e-05, 2.09808349609375e-05, 2.3126602172851562e-05, 2.09808349609375e-05, 2.2172927856445312e-05, 3.0040740966796875e-05, 2.5987625122070312e-05, 2.7894973754882812e-05, 2.5033950805664062e-05, 2.8133392333984375e-05, 2.7179718017578125e-05, 2.5033950805664062e-05, 2.9802322387695312e-05, 2.6941299438476562e-05, 2.8133392333984375e-05, 1.5974044799804688e-05, 2.09808349609375e-05, 2.4080276489257812e-05, 2.6941299438476562e-05, 2.09808349609375e-05, 2.5033950805664062e-05, 3.409385681152344e-05], \"x\": [0.8813597256974233, 0.0, 0.0, 0.0, 3.999957749815388, 0.0, 1.5572635495249434, 3.998405798916941, -0.545572271688768, 0.0, 0.0, 0.0, 0.0, 3.763572395131361, 3.068550670062895, 3.2752922805025984, 0.8236966222407358, 2.9932896659263797, 0.91415981635549, 0.0, 1.6198780596158917, -0.427129634851252, 3.0098942167254656, 0.0, 0.0, 0.0, 1.6380234955612019, 0.0, -0.7293273276603671, -0.9162993014777822], \"type\": \"scatter\", \"mode\": \"markers\"}], {\"title\": \"Training Time vs Evaluated Metric\", \"yaxis\": {\"title\": \"seconds\"}}, {\"linkText\": \"Export to plot.ly\", \"showLink\": true})</script>"
+       "<div id=\"5cade5b3-d90f-4713-a117-8b75b4726f11\" style=\"height: 525; width: 100%;\" class=\"plotly-graph-div\"></div><script type=\"text/javascript\">window.PLOTLYENV=window.PLOTLYENV || {};window.PLOTLYENV.BASE_URL=\"https://plot.ly\";Plotly.newPlot(\"5cade5b3-d90f-4713-a117-8b75b4726f11\", [{\"y\": [2.2584171295166016, 1.750730037689209, 2.4601049423217773, 4.326413154602051, 3.998094081878662, 3.486644983291626, 1.785417079925537, 4.133500099182129, 4.053692102432251, 2.1567859649658203, 3.8996100425720215, 3.617285966873169, 1.8546390533447266, 4.112657070159912, 4.241988182067871, 1.9639778137207031, 1.887462854385376, 3.642519950866699, 4.153061151504517, 4.289895057678223, 3.8739898204803467, 3.71162486076355, 3.638184070587158, 3.9094250202178955, 0.29040002822875977, 0.09891080856323242, 0.386991024017334, 0.013887882232666016, 0.28368401527404785, 4.282311916351318], \"x\": [0.5833773488900882, 1.132729822156705, 3.084817663893156, 4.360913697444432, 4.268189292728335, 4.340202046682497, 1.3388283010715218, 4.330363254918995, 4.269352579491882, 2.9784969518794155, 4.316404826324611, 3.1593455305120193, 1.8126000696587492, 3.297734022608555, 4.792651932547498, 2.317590628330197, 0.7699726989542093, 3.883580948857427, 4.588399331876747, 4.38415865732213, 3.3355935683849727, 3.702714128886894, 3.633131123007805, 4.0583543538300395, 0.28589478541665697, 0.09559802643696537, 0.14982574353757228, 0.9288873876546804, 0.7319764712128388, 4.301445180973241], \"type\": \"scatter\", \"mode\": \"markers\"}], {\"title\": \"Training Time vs Evaluated Metric\", \"yaxis\": {\"title\": \"seconds\"}}, {\"linkText\": \"Export to plot.ly\", \"showLink\": true})</script>"
       ],
       "text/plain": [
        "<IPython.core.display.HTML object>"
