--- a/ipython-notebook-example/SigOpt_Introduction.ipynb
+++ b/ipython-notebook-example/SigOpt_Introduction.ipynb
@@ -78,11 +78,11 @@
     }
    ],
    "source": [
-    "import sigopt.interface\n",
+    "import sigopt\n",
     "# Find your SigOpt creds at https://sigopt.com/user/profile\n",
     "from sigopt_creds import client_token\n",
     "\n",
-    "conn = sigopt.interface.Connection(\n",
+    "conn = sigopt.Connection(\n",
     "    client_token=client_token,\n",
     ")\n",
     "\n",
