--- a/sigopt-beats-vegas/SigOpt NBA OverUnder Model.ipynb
+++ b/sigopt-beats-vegas/SigOpt NBA OverUnder Model.ipynb
@@ -42,10 +42,10 @@
    },
    "outputs": [],
    "source": [
-    "import sigopt.interface\n",
+    "import sigopt\n",
     "# Find your SigOpt creds at https://sigopt.com/user/profile\n",
     "\n",
-    "conn = sigopt.interface.Connection(client_token=client_token)\n",
+    "conn = sigopt.Connection(client_token=client_token)\n",
     "\n",
     "experiment_detail = conn.experiments(EXPERIMENT_ID).fetch()\n",
     "best_observation = experiment_detail.progress.best_observation\n",
