--- a/text-classifier/SigOpt Text Classifier Walkthrough.ipynb
+++ b/text-classifier/SigOpt Text Classifier Walkthrough.ipynb
@@ -231,11 +231,11 @@
    "source": [
     "# Set the environment variable SIGOPT_API_TOKEN to your client token\n",
     "# Find you client token at sigopt.com/user/profile\n",
-    "import sigopt.interface\n",
+    "import sigopt\n",
     "try:\n",
-    "    conn = sigopt.interface.Connection()\n",
+    "    conn = sigopt.Connection()\n",
     "except ValueError:\n",
-    "    conn = sigopt.interface.Connection(client_token=YOUR_API_TOKEN)"
+    "    conn = sigopt.Connection(client_token=YOUR_API_TOKEN)"
    ]
   },
   {
