--- a/estimated-training-time/How are My Hyperparameters Affecting My Training Time?.ipynb
+++ b/estimated-training-time/How are My Hyperparameters Affecting My Training Time?.ipynb
@@ -33,7 +33,7 @@
    "source": [
     "# Insert your SigOpt API token below, or set as the environment variable SIGOPT_API_TOKEN\n",
     "# Find your API Token at https://sigopt.com/user/profile\n",
-    "from sigopt.interface import Connection\n",
+    "from sigopt import Connection\n",
     "conn = Connection() # attempt to use environment variable SIGOPT_API_TOKEN\n",
     "# conn = Connection(client_token=SIGOPT_API_TOKEN) # enter token directly"
    ]
