Update to sigopt 1.6.0

--- a/estimated-training-time/How are My Hyperparameters Affecting My Training Time?.ipynb
+++ b/estimated-training-time/How are My Hyperparameters Affecting My Training Time?.ipynb
@@ -226,7 +226,7 @@
    ],
    "source": [
     "# Plot a histogram of the distribution of training times\n",
-    "observations = conn.experiments(experiment.id).observations().fetch().data\n",
+    "observations = list(conn.experiments(experiment.id).observations().fetch().iterate_pages())\n",
     "training_time_map = {\n",
     "    observation.id: observation.metadata['training_time'] \n",
     "    for observation \n",
