--- a/ipython-notebook-example/SigOpt_Introduction.ipynb
+++ b/ipython-notebook-example/SigOpt_Introduction.ipynb
@@ -254,7 +254,7 @@
     }
    ],
    "source": [
-    "history = conn.experiments(experiment.id).observations().fetch().data\n",
+    "history = list(conn.experiments(experiment.id).observations().fetch().iterate_pages())\n",
     "history = sorted(history, key=lambda obs: obs.to_json()['created'])\n",
     "sigopt_history = [obs.assignments for obs in history]\n",
     "\n",
