--- a/sigopt-beats-vegas/SigOpt NBA OverUnder Model.ipynb
+++ b/sigopt-beats-vegas/SigOpt NBA OverUnder Model.ipynb
@@ -113,8 +113,7 @@
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
     "\n",
-    "obs = conn.experiments(EXPERIMENT_ID).observations().fetch()\n",
-    "alist = [a for a in obs.data]\n",
+    "alist = list(conn.experiments(EXPERIMENT_ID).observations().fetch().iterate_pages())\n",
     "def ts(a):\n",
     "    created = a.to_json()['created']\n",
     "    return created\n",
