--- a/text-classifier/SigOpt Text Classifier Walkthrough.ipynb
+++ b/text-classifier/SigOpt Text Classifier Walkthrough.ipynb
@@ -9,9 +9,9 @@
     "\n",
     "Text classification problems appear quite often in modern information systems, and you might imagine building a small document/tweet/blogpost classifier for any number of purposes. In this example, we're building a pipeline to label [Amazon product reviews](http://www.cs.jhu.edu/~mdredze/datasets/sentiment/) as either favorable or not. First, we'll use scikit-learn to build a logistic regression classifier, performing k-fold cross validation to measure the accuracy. Next, we'll use SigOpt to tune the hyperparameters of both the feature extraction and the model building. \n",
     "## Setup\n",
-    "If you’d like to try running this example, we recommend using a Mac OS X (with brew) or an Ubuntu machine having at least 4GB of RAM (t2.mediums in EC2 are cheap and work great). Sign up for a [SigOpt](https://sigopt.com/) free trial and find your API token on your [profile page](sigopt.com/user/plan).\n",
-    "\n",
-    "Edit the next few lines, inserting your API token and other appropriate values to allow this notebook to run the setup script for this example. Press shift + enter to run each cell:"
+    "If you'd like to try running this example, you'll need to install:\n",
+    " * [scikit-learn](http://scikit-learn.org/stable/install.html)\n",
+    " * SigOpt's [python client](https://sigopt.com/docs/overview/python)\n"
    ]
   },
   {
@@ -22,12 +22,9 @@
    },
    "outputs": [],
    "source": [
-    "%%! \n",
-    "export SIGOPT_API_TOKEN=<YOUR API TOKEN>                            # set your SigOpt API token\n",
-    "git clone https://github.com/sigopt/sigopt-examples.git             # Clone the repo\n",
-    "cd sigopt-examples/text-classifier/                                 # text-classifier example\n",
-    "echo <YOUR PASSWORD FOR SUDO> | sudo -S ./setup_env.sh &> /dev/null # Setup your environment\n",
-    "echo setup completed"
+    "# Learn more about authenticating the SigOpt API: sigopt.com/docs/overview/authentication\n",
+    "# Uncomment the following line and add your SigOpt API token:\n",
+    "# SIGOPT_API_TOKEN=<YOUR API TOKEN>"
    ]
   },
   {
@@ -229,13 +226,9 @@
    },
    "outputs": [],
    "source": [
-    "# Set the environment variable SIGOPT_API_TOKEN to your client token\n",
-    "# Find you client token at sigopt.com/user/profile\n",
-    "import sigopt\n",
-    "try:\n",
-    "    conn = sigopt.Connection()\n",
-    "except ValueError:\n",
-    "    conn = sigopt.Connection(client_token=YOUR_API_TOKEN)"
+    "# Learn more about authenticating the SigOpt API: sigopt.com/docs/overview/authentication\n",
+    "from sigopt import Connection\n",
+    "conn = Connection(client_token=SIGOPT_API_TOKEN)"
    ]
   },
   {
@@ -514,7 +507,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython2",
-   "version": "2.7.11"
+   "version": "2.7.10"
   }
  },
  "nbformat": 4,
