Use budgets throughout

--- a/estimated-training-time/How are My Hyperparameters Affecting My Training Time?.ipynb
+++ b/estimated-training-time/How are My Hyperparameters Affecting My Training Time?.ipynb
@@ -70,6 +70,8 @@
     "        {'name': 'y', 'type': 'int', 'bounds': {'min': 0, 'max': 2}},\n",
     "        {'name': 'z', 'type': 'double', 'bounds': {'min': 0, 'max': 1.0}},\n",
     "    ],\n",
+    "    # train for 10x to 20x the number of parameters\n",
+    "    observation_budget=30,\n",
     ")\n",
     "print \"View you experiment at https://sigopt.com/experiment/{}\".format(experiment.id)"
    ]
@@ -114,8 +116,7 @@
    },
    "outputs": [],
    "source": [
-    "# train for 10x to 20x the number of dimensions\n",
-    "for _ in range(30):\n",
+    "for _ in range(experiment.observation_budget):\n",
     "    suggestion = conn.experiments(experiment.id).suggestions().create()\n",
     "    start_ts = time.time()\n",
     "    value = evaluate_metric(suggestion.assignments)\n",
