--- a/ipython-notebook-example/SigOpt_Introduction.ipynb
+++ b/ipython-notebook-example/SigOpt_Introduction.ipynb
@@ -86,9 +86,12 @@
     "    client_token=client_token,\n",
     ")\n",
     "\n",
+    "SIGOPT_TOTAL = 40\n",
+    "\n",
     "experiment = conn.experiments().create(\n",
     "  name='SigOpt Introduction Example',\n",
     "  parameters=obj.parameters,\n",
+    "  observation_budget=SIGOPT_TOTAL,\n",
     ")\n",
     "\n",
     "print \"You can track your experiment at https://sigopt.com/experiment/{0}\".format(experiment.id)"
@@ -111,10 +114,9 @@
     }
    ],
    "source": [
-    "SIGOPT_TOTAL = 40\n",
     "import time\n",
     "\n",
-    "for _ in range(SIGOPT_TOTAL):\n",
+    "for _ in range(experiment.observation_budget):\n",
     "    suggestion = conn.experiments(experiment.id).suggestions().create()\n",
     "    obj_val = obj.evaluate(suggestion.assignments)\n",
     "    \n",
