Move import statements close to respective code blocks

--- a/R-random-forest/Random Forest.ipynb
+++ b/R-random-forest/Random Forest.ipynb
@@ -9,27 +9,8 @@
     "\n",
     "# Setup\n",
     " - Run `pip install sigopt` to download the python API client\n",
-    " - Run `pip install sklearn` to install [scikit-learn](http://scikit-learn.org), a machine learning library in Python "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "from sigopt import Connection\n",
-    "from sklearn import cross_validation, datasets\n",
-    "from sklearn.ensemble import RandomForestClassifier\n",
-    "import numpy"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
+    " - Run `pip install sklearn` to install [scikit-learn](http://scikit-learn.org), a machine learning library in Python \n",
+    "\n",
     "Insert your [SigOpt API Token](https://sigopt.com/docs/overview/authentication) below: "
    ]
   },
@@ -41,6 +22,7 @@
    },
    "outputs": [],
    "source": [
+    "from sigopt import Connection\n",
     "conn = Connection(client_token=SIGOPT_API_TOKEN)"
    ]
   },
@@ -60,6 +42,7 @@
    },
    "outputs": [],
    "source": [
+    "from sklearn import datasets\n",
     "iris = datasets.load_iris()\n",
     "X = iris.data\n",
     "y = iris.target"
@@ -108,6 +91,10 @@
    },
    "outputs": [],
    "source": [
+    "from sklearn import cross_validation\n",
+    "from sklearn.ensemble import RandomForestClassifier\n",
+    "import numpy\n",
+    "\n",
     "def evaluate_model(assignments, X, y):\n",
     "  cv = cross_validation.ShuffleSplit(\n",
     "    X.shape[0],\n",
