put language in experiment name

--- a/random-forest/Random Forest.ipynb
+++ b/random-forest/Random Forest.ipynb
@@ -65,7 +65,7 @@
    "outputs": [],
    "source": [
     "experiment = conn.experiments().create(\n",
-    "  name=\"iPython RandomForest\",\n",
+    "  name=\"Random Forest (iPython)\",\n",
     "  parameters=[\n",
     "    dict(name=\"max_features\", type=\"int\", bounds=dict(min=1, max=len(iris)-1)),\n",
     "    dict(name=\"n_estimators\", type=\"int\", bounds=dict(min=1, max=100)),\n",
