report standard deviation in python

--- a/random-forest/Random Forest.ipynb
+++ b/random-forest/Random Forest.ipynb
@@ -107,7 +107,7 @@
     "    min_samples_leaf=assignments['min_samples_leaf']\n",
     "  )\n",
     "  cv_accuracies = cross_validation.cross_val_score(classifier, X, y, cv=cv)\n",
-    "  return numpy.mean(cv_accuracies)"
+    "  return (numpy.mean(cv_accuracies), numpy.std(cv_accuracies))"
    ]
   },
   {
@@ -131,12 +131,13 @@
     "    suggestion = conn.experiments(experiment.id).suggestions().create()\n",
     "\n",
     "    # Evaluate the model locally\n",
-    "    value = evaluate_model(suggestion.assignments, X, y)\n",
+    "    (value, std) = evaluate_model(suggestion.assignments, X, y)\n",
     "\n",
     "    # Report an Observation (with standard deviation) back to SigOpt\n",
     "    conn.experiments(experiment.id).observations().create(\n",
     "        suggestion=suggestion.id,\n",
     "        value=value,\n",
+    "        value_stddev=std,\n",
     "    )"
    ]
   },
