Prefer environment variable to sigopt_creds

--- a/ipython-notebook-example/SigOpt_Introduction.ipynb
+++ b/ipython-notebook-example/SigOpt_Introduction.ipynb
@@ -80,11 +80,8 @@
    "source": [
     "import sigopt\n",
     "# Find your SigOpt creds at https://sigopt.com/user/profile\n",
-    "from sigopt_creds import client_token\n",
     "\n",
-    "conn = sigopt.Connection(\n",
-    "    client_token=client_token,\n",
-    ")\n",
+    "conn = sigopt.Connection()",
     "\n",
     "SIGOPT_TOTAL = 40\n",
     "\n",
