--- a/sigopt-beats-vegas/SigOpt NBA OverUnder Model.ipynb
+++ b/sigopt-beats-vegas/SigOpt NBA OverUnder Model.ipynb
@@ -20,10 +20,9 @@
    },
    "outputs": [],
    "source": [
-    "from predictor.sigopt_creds import client_token\n",
     "from predictor.stand_alone import run_example\n",
     "# Warning, this can take a very long time (many hours)\n",
-    "#EXPERIMENT_ID = run_example(client_token)\n",
+    "#EXPERIMENT_ID = run_example()\n",
     "EXPERIMENT_ID = 1545 # Put your experiment ID here if you have already run stand_alone"
    ]
   },
@@ -45,7 +44,7 @@
     "import sigopt\n",
     "# Find your SigOpt creds at https://sigopt.com/user/profile\n",
     "\n",
-    "conn = sigopt.Connection(client_token=client_token)\n",
+    "conn = sigopt.Connection()\n",
     "\n",
     "experiment_detail = conn.experiments(EXPERIMENT_ID).fetch()\n",
     "best_observation = experiment_detail.progress.best_observation\n",
