Update ipython notebook

--- a/ipython-notebook-example/SigOpt_Introduction.ipynb
+++ b/ipython-notebook-example/SigOpt_Introduction.ipynb
@@ -63,26 +63,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {
     "collapsed": false,
     "scrolled": true
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "You can track your experiment at https://sigopt.com/experiment/1264\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import sigopt\n",
     "# Find your SigOpt creds at https://sigopt.com/user/profile\n",
     "\n",
-    "conn = sigopt.Connection()",
-    "\n",
+    "conn = sigopt.Connection(client_token='YOUR_CLIENT_TOKEN_GOES_HERE')\n",
     "SIGOPT_TOTAL = 40\n",
     "\n",
     "experiment = conn.experiments().create(\n",
@@ -96,24 +87,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Optimization done. View results at https://sigopt.com/experiment/{0}\n",
-      "Best value found: 202.853579453 at {u'x2': 100.0, u'x1': -58.9949218845}\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import time\n",
     "\n",
-    "for _ in range(experiment.observation_budget):\n",
+    "for i in range(experiment.observation_budget):\n",
     "    suggestion = conn.experiments(experiment.id).suggestions().create()\n",
     "    obj_val = obj.evaluate(suggestion.assignments)\n",
     "    \n",
@@ -128,12 +110,12 @@
     "      suggestion=suggestion.id,\n",
     "      value=obj_val,\n",
     "    )\n",
+    "    print \"Created observation {0}/{1}\".format(i+1, experiment.observation_budget)\n",
     "\n",
     "print \"Optimization done. View results at https://sigopt.com/experiment/{0}\".format(experiment.id)\n",
     "\n",
-    "experiment_detail = conn.experiments(experiment.id).fetch()\n",
-    "best_observation = experiment_detail.progress.best_observation\n",
-    "print \"Best value found: {0} at {1}\".format(best_observation.value, best_observation.assignments)"
+    "for best_assignments in conn.experiments(experiment.id).best_assignments().fetch().iterate_pages():\n",
+    "    print \"Best value found: {0} at {1}\".format(best_assignments.value, best_assignments.assignments)"
    ]
   },
   {
