--- a/random-forest/python/Random Forest.ipynb
+++ b/random-forest/python/Random Forest.ipynb
@@ -156,9 +156,8 @@
    },
    "outputs": [],
    "source": [
-    "# Re-fetch the experiment to get the best observed value and assignments\n",
-    "experiment = conn.experiments(experiment.id).fetch()\n",
-    "best_assignments = experiment.progress.best_observation.assignments\n",
+    "# Re-fetch the best observed value and assignments\n",
+    "best_assignments = conn.experiments(experiment.id).best_assignments().fetch().data[0].assignments\n",
     "\n",
     "# To wrap up the Experiment, fit the RandomForest on the best assigments\n",
     "# and train on all available data\n",
