replace user/profile for tokens/info

--- a/estimated-training-time/How are My Hyperparameters Affecting My Training Time?.ipynb
+++ b/estimated-training-time/How are My Hyperparameters Affecting My Training Time?.ipynb
@@ -20,7 +20,7 @@
     "pip install -r requirements.txt\n",
     "jupyter notebook\n",
     "```\n",
-    "Next, get your SigOpt API token from your [user dashboard](https://sigopt.com/user/profile). Set as the environment variable `SIGOPT_API_TOKEN`, or insert directly into the code below."
+    "Next, get your SigOpt API token from your [user dashboard](https://sigopt.com/tokens/info). Set as the environment variable `SIGOPT_API_TOKEN`, or insert directly into the code below."
    ]
   },
   {
@@ -32,7 +32,7 @@
    "outputs": [],
    "source": [
     "# Insert your SigOpt API token below, or set as the environment variable SIGOPT_API_TOKEN\n",
-    "# Find your API Token at https://sigopt.com/user/profile\n",
+    "# Find your API Token at https://sigopt.com/tokens/info\n",
     "from sigopt import Connection\n",
     "conn = Connection() # attempt to use environment variable SIGOPT_API_TOKEN\n",
     "# conn = Connection(client_token=SIGOPT_API_TOKEN) # enter token directly"
