profile-page => API tokens page

--- a/multimetric-demo/finding_multiple_optima.ipynb
+++ b/multimetric-demo/finding_multiple_optima.ipynb
@@ -13,7 +13,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Below we create the standard SigOpt [connection](https://sigopt.com/docs/overview/python) tool.  If the `SIGOPT_API_TOKEN` is present in the environment variables, it is imported; otherwise, you need to copy and paste your key from your [profile page](https://sigopt.com/tokens/info)."
+    "Below we create the standard SigOpt [connection](https://sigopt.com/docs/overview/python) tool.  If the `SIGOPT_API_TOKEN` is present in the environment variables, it is imported; otherwise, you need to copy and paste your key from the [API tokens page](https://sigopt.com/tokens/info)."
    ]
   },
   {
