--- a/sigopt-beats-vegas/SigOpt NBA OverUnder Model.ipynb
+++ b/sigopt-beats-vegas/SigOpt NBA OverUnder Model.ipynb
@@ -42,7 +42,7 @@
    "outputs": [],
    "source": [
     "import sigopt\n",
-    "# Find your SigOpt creds at https://sigopt.com/tokens/info\n",
+    "# Find your SigOpt creds at https://sigopt.com/tokens\n",
     "\n",
     "conn = sigopt.Connection()\n",
     "\n",
